# django-user-profile

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: main_travelersnest.yml
Users/: manager.py  models.py  utils.py  views.py
Users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_otpdata_remove_user_otp.py  0004_otpdata_created_at.py  0005_remove_otpdata_created_at_otpdata_created_date_and_more.py  0006_remove_otpdata_id_alter_otpdata_email.py  0007_user_phone_number_alter_user_bio_and_more.py
projectroot/: asgi.py  settings.py  urls.py  views.py  wsgi.py
staticfiles/: script.js  style.css
templates/home/: index_page.html
templates/users/: create_account_page.html  edit_account_page.html  edit_email_address.html  edit_password_page.html  forget_email_page.html  forget_password_email_page.html  login_account_page.html  otp_submit_page.html  upload_profile_image_page.html  user_profile_page.html
